--- a/app/components/cards/cards.css
+++ b/app/components/cards/cards.css
@@ -28,6 +28,7 @@
     flex-direction: column;
     text-align: left;
     gap: 3vw;
+    width: 70vw;
 }
 
 .vertical-info-card img{
@@ -40,10 +41,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3vw;
+    gap: 1vw;
 }
 
-.card-info-container h1{
+.card-info-container h2{
     background-color: #064d79;
     color: white;
     display: flex;
@@ -64,7 +65,8 @@
         padding: 1vw;
     }
     .vertical-info-card{
-        gap: 1vw;   
+        gap: 1vw;
+        width: auto;   
     }
     .vertical-info-card img{
         width: auto;
@@ -77,7 +79,7 @@
     .card-info-container p{
         font-size: 1vw;
     }
-    .card-info-container h1{
+    .card-info-container h2{
         padding: 1vw 3vw;
         font-size: 1vw;
     }
