--- a/app/programs/programs.css
+++ b/app/programs/programs.css
@@ -77,7 +77,7 @@
 .programs-nav{
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
     margin: 0 5vw 5vw 5vw;
 }
 
@@ -114,6 +114,7 @@
     color: #064d79;
     font-size: 5vw;
     text-align: center;
+    text-decoration: underline #abd9e9;
 }
 
 .program{
@@ -125,6 +126,12 @@
     color: #064d79;
 }
 
+.multiple-programs{
+    display: flex;
+    gap: 5vw;
+    flex-direction: column;
+}
+
 .program img{
     width: 100%;
 }
@@ -132,46 +139,40 @@
 @media(min-width:1024px){
     .programs-banner{
         margin-top: 2vw;
-        flex-direction: row;
-        align-items: baseline;
     }
     .programs-title{
         margin: 1vw 0 0vw 0;
-        font-size: 1.5vw;
+        font-size: 3vw;
     }
     .card-icon{
         height: 3vw;
         width: auto;
         margin-top: 0;
     }
-    /* campaigns */
-    .campaigns{
-        margin-top: 2vw;
-        display: flex;
-        align-items: baseline;
-        justify-content: center;
+    .multiple-programs{
         gap: 5vw;
+        width: 70vw;
     }
-    .campaign{
-        max-width: 20vw;
-        margin-bottom: 2vw;
-    }
-    .campaign img{
-        width: 20vw;
-    }
-    /* campaigns */
-    /* programs */
-    .program{
-        margin-top: 2vw;
-    }
-    .program-data{
-        display: flex;
+    /* custom card */
+    .program-card{
         flex-direction: row;
-        gap: 5vw;
-        font-size: 2vw;
-    }
-    .program-data img{
         width: 100%;
     }
-    /* programs */
+    .program-card img{
+        height: 30vw;
+    }
+    .program-card div{
+        align-items: flex-start;
+        max-width: 50vw;
+    }
+    .program-card div h2{
+        background: none;
+        padding: 0;
+        color: #064d79;
+        font-size: 2vw;
+    }
+    .program-card div p{
+        font-size: 1.5vw;
+    }   
+    /* custom card */
 }
