--- a/app/programs/programs.css
+++ b/app/programs/programs.css
@@ -27,14 +27,14 @@
     transform: scale(1.05);
 }
 
-.colaborate-redirect{
+.redirect-programs{
     font-size: 1.8rem;
     color: #064d79;
     text-decoration: none;
     cursor: pointer;
 }
 
-.colaborate-redirect::after{
+.redirect-programs::after{
     content: '';
     display: block;
     width: 100%;
@@ -44,7 +44,7 @@
     transition: transform .2s ease-in-out;
 }
 
-.colaborate-redirect:hover::after{
+.redirect-programs:hover::after{
     transform: scaleX(1);
 }
 
@@ -90,24 +90,6 @@
     color: #064d79;
 }
 
-
-.programs-nav button::after{
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    transform: scaleX(0);
-    background-color: #abd9e9;
-    transition: transform .2s ease-in-out;
-}
-
-.programs-nav button:hover{
-    cursor: pointer;
-}
-
-.programs-nav button:hover::after{
-    transform: scaleX(1);
-}
 
 .programs-title{
     margin: 20vw 0 5vw 0;
