--- a/app/components/navbar/navbar.css
+++ b/app/components/navbar/navbar.css
@@ -42,6 +42,8 @@
     justify-self: center;
     gap: 1vw;
     font-size: 4vw;
+    text-decoration: none;
+    color: #064d79;
 }
 
 .navbar-logo img{
@@ -156,6 +158,6 @@
         font-size: 1.5vw;
     }
     .navbar-logo img{
-        width: 2.5vw;
+        width: 2.3vw;
     }
 }
