--- a/app/programs/programs.css
+++ b/app/programs/programs.css
@@ -18,15 +18,6 @@
     margin: 5vw 0 3vw 0;
 }
 
-.program-card img{
-    transition: transform .1s ease-in-out;
-}
-
-.program-card img:hover{
-    cursor: pointer;
-    transform: scale(1.05);
-}
-
 .redirect-programs{
     font-size: 1.8rem;
     color: #064d79;
@@ -92,9 +83,9 @@
 
 
 .programs-title{
-    margin: 20vw 0 5vw 0;
+    margin: 20vw 5vw 0vw 5vw;
     color: #064d79;
-    font-size: 5vw;
+    font-size: 7vw;
     text-align: center;
     text-decoration: underline #abd9e9;
 }
@@ -110,12 +101,17 @@
 
 .multiple-programs{
     display: flex;
-    gap: 5vw;
+    gap: 15vw;
     flex-direction: column;
 }
 
 .program img{
     width: 100%;
+}
+
+.programs-category-title{
+    font-size: 6vw;
+    margin: 7vw 0 0 0;
 }
 
 @media(min-width:1024px){
@@ -135,6 +131,9 @@
         gap: 5vw;
         width: 70vw;
     }
+    .programs-category-title{
+        font-size: 3vw;
+    }
     /* custom card */
     .program-card{
         flex-direction: row;
@@ -142,6 +141,8 @@
     }
     .program-card img{
         height: 30vw;
+        object-fit: cover;
+        max-width: 20vw;
     }
     .program-card div{
         align-items: flex-start;
