--- a/app/about/about-us.css
+++ b/app/about/about-us.css
@@ -1,15 +1,29 @@
-.about-us{
-    margin: 20vw 10vw 0 10vw;
-    display: block;
+.about-header-section{
+    margin-top: 15vw;
+    background-color: #064e7aff;
+}
+.about-header-img{
+    width: 100%;
+    height: auto;
+    filter: brightness(0.8);
+}
+.about-header{
+    padding: 15vw 10vw;
+    color: white;
+    display: flex;
     flex-direction: column;
-    color: #147dbe;
-    text-align: justify;
+    gap: 5vw;
 }
 
-.join-us{
-    margin-top: 3vw;
-    text-align: center;
+.about-header h1{
+    font-size: 8vw;
 }
+
+.about-header p{
+    font-size: 4.5vw;
+    line-height: 1.2;
+}
+
 
 /* .wrapping-text{
     overflow-wrap: anywhere;
@@ -20,12 +34,6 @@
     /* flex-direction: column; */
     justify-content: baseline;
 
-}
-
-.about-us img{
-    height: fit-content;
-    width: 50%;
-    margin: 0 1vw 0 0;
 }
 
 .first-image{
@@ -57,15 +65,15 @@
     gap: 3vw;
 }
 
-.team h1, h2{
+.team h3, .team p{
     text-align: center;
     color: #064d79;
 }
-.team h1{
+.team h3{
     font-weight: 500;
 }
-.team h2{
-    font-weight: 250;
+.team p{
+    font-weight: 400;
 }
 .coord{
     display: flex;
@@ -77,39 +85,41 @@
     height: auto;
 }
 
-.comision .title{
-    text-align: left;
-    text-decoration: underline;
-}
-
-.comision h2{
-    color: #064d79;
-    text-align: end;
-}
-
 .about-title{
     font-size: 7vw;
 }
 
+
 @media(min-width:1024px){
-    .about-us{
-        margin-top: 5vw;
-        font-size: 1.5vw;
+    .about-header-section{
+        margin: 0;
     }
-    .about-us a{
-        color: #064d79;
-        text-decoration: underline;
+    .about-header-img{
+        height: 35vw;
+        object-fit: cover;
+        object-position: 0 -10vw;
     }
-    .about-title{
-        font-size: 2.5vw;
+    .about-header{
+        padding: 5vw 7vw;
+        gap: 2vw;
     }
-    .comision h2{
-        text-align: left;
+    .about-header h1{
+        font-size: 5vw;
     }
+    .about-header p{
+        font-size: 2vw;
+    }
+    .team-container{
+        margin: 5vw 0;
+    }
+    .team{
+        margin: 0 5vw;
+    }
+
     .coord{
         justify-content: start;
         width: 20vw;
-        gap: 2vw;
+        gap: 0.2vw;
     }
     .coord img{
         width: 20vw;
