--- a/app/components/footer/footer.css
+++ b/app/components/footer/footer.css
@@ -3,19 +3,28 @@
     /* bottom: 0; */
     width: 100%;
     padding: 5vw;
-    background-color: #abd9e9;
+    background-color: black;
     color: #064d79;
     display: flex;
     gap: 5vw;
+    justify-content: center;
+}
+
+.social-link{
+    line-height: 0;
+    border-radius: 50%;
+    background-color: white;
+    padding: 1.7vw;
 }
 
 .social-media{
     display: flex;
-    gap: 2vw;
+    gap: 7vw;
 }
 
 .social-media img{
-    width: 10vw;
+    width: 4vw;
+    height: 4vw;
 }
 
 .contact{
@@ -33,7 +42,11 @@
     .footer{
         padding: 1vw;
     }
+    .social-link{
+        padding: 1vw;
+    }
     .social-media img{
-        width: 2vw;
+        width: 1.5vw;
+        height: 1.5vw;
     }
 }
