--- a/app/contact/contact.css
+++ b/app/contact/contact.css
@@ -1,71 +1,151 @@
+.contact-main{
+    background-color: #137ebeff;
+}
+
+.contact-header-section{
+    margin-top: 25vw;
+    
+}
+
+.contact-header-section header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10vw;
+    gap: 5vw;
+    color: white;
+    text-align: center;
+}
+
+.contact-title{
+    font-size: 8vw;
+}
+
+.contact-text{
+    font-size: 4.5vw;
+}
+
 .form-container{
-    margin: 25vw 0;
+    margin: 10vw 0;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 5vw;
+    padding: 0 10vw;
 }
 
 .form-container button{
-    padding: 1vw 5vw;
-    background-color: #abd9e9;
-    color: #064d79;
+    padding: 2vw 5vw;
+    background-color: white;
+    font-size: 5vw;
+    font-weight: 700;
+    color: #137ebeff;
     border: none;
-    border-radius: 2rem;
-    transition: background-color .2s, color .2s;
-}
-
-.form-container button:hover{
-    cursor: pointer;
-    color: #abd9e9;
-    background-color: #064d79;
+    border-radius: 30px;
+    width: 100%;
 }
 
 .form-article{
     display: flex;
     flex-direction: column;
-    width: 60vw;
-    gap: 1vw;
+    width: 100%;
+    gap: 2vw;
 }
 
 .form-article label{
-    color: #064d79;
+    color: white;
+    font-size: 4.5vw;
 }
 
 .form-article input, textarea{
-    padding: 1.5vw;
-    font-size: 4vw;
-    border: 1px solid #abd9e9;
-    border-radius: 2rem;
+    background-color: #137ebeff;
+    padding: 2vw 4vw;
+    font-size: 6vw;
+    color: white;
+    border: 2px solid white;
+    border-radius: 20px;
+    outline: none;
 }
 
-h3{
-    font-weight: 300;
-    color: red;
-    font-size: 4vw;
+.form-article input{
+    border-radius: 30px;
+}    
+
+.form-article input:focus, textarea:focus{
+    border: 2px solid white;
+    outline: none;
 }
+
+.form-left{
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+    width: 100%;
+}
+
+.form-right{
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+    width: 100%;
+}
+
 
 @media(min-width: 1024px){
+    .contact-header-section{
+        margin: 2vw 0;
+    }
+    .contact-title{
+        font-size: 2vw;
+    }
+    .contact-text{
+        font-size: 1.5vw;
+        text-align: start;
+    }
     .form-container{
         margin: 5vw;
         gap: 1vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
     .form-container button{
-        padding: 0.5vw 2vw;
+        overflow: visible;
+        padding: 1vw 2vw;
         font-size: 1vw;
+    }
+    .form-container button:hover{
+        cursor: pointer;
     }
     .form-article{
         width: auto;
+        gap: 1vw;
+        height: 100%;
+    }
+    .form-article h3, label{
+        overflow: visible;
+    }
+    .form-article textarea{
+        height: 90%;
     }
     .form-article label{
-        font-size: 1vw;
+        font-size: 1.5vw;
     }
     .form-article input, textarea{
-        font-size: 1vw;
-        width: 25vw;
+        font-size: 2vw;
+        width: 100%;
         padding: 1vw;
+    }
+    .form-left{
+        width: 30vw!important;
+        gap: 2vw;
+    }
+    .form-right{
+        height: 100%;
+        width: 30vw!important;
+        gap: 2vw;
     }
     h3{
         font-size: 1vw;
