--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 html,body{
@@ -16,15 +17,16 @@ html,body{
   margin: 0;
   padding: 0;
   text-align: unset;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
 main{
   flex: 1;
-  align-content: center;
 }
+
+
 
 .bi{
   display: flex;
@@ -34,6 +36,6 @@ h1, h2, button, label{
   font-family: 'Montserrat', serif;
 }
 
-p, a, h3, input, textarea{
+p, a, h3, input, textarea, li{
   font-family: "Raleway", serif;
 }
