--- a/app/home.css
+++ b/app/home.css
@@ -1,35 +1,115 @@
-.card-banner{
-    display: grid;
-    justify-content: center;
-    gap: 10vw;
-    margin-bottom: 10vw;
+.frontpage-home-section{
+    margin-top: 15vw;
 }
-
+.main-home-frontpage{
+    width: 100%;
+}
+.main-home-frontpage-text{
+    order: 2;
+    color: #ffffff;
+    padding: 10vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5vw;
+    align-items: flex-start;
+}
+.frontpage-about{
+    order: 2;
+    background-color: #064e7aff;
+}
+.frontpage-programs{
+    order: 4;
+    background-color: #137ebeff;
+}
+.main-home-frontpage-text p{
+    font-size: 5vw;
+}
+.frontpage-about h1{
+    font-size: 10vw;
+    font-weight: bold;
+}
+.frontpage-about h3{
+    font-size: 5vw;
+    font-weight: bold;
+    margin-bottom: 2vw;
+}
+.frontpage-programs-section{
+    display: flex;
+    flex-direction: column;
+}
+.frontpage-programs h2{
+    color: #ffffff;
+    font-size: 6vw;
+    font-weight: bold;
+    margin-bottom: 2vw;
+}
+.main-home-frontpage-img{
+    width: 100% !important;
+    height: auto !important;
+    margin: 0 0 -5px 0;
+    display: block;
+}
+.main-home-frontpage-img{
+    order: 1;
+}
 
 .impact-grid{
     display: flex;
     flex-direction: column;
     gap: 5vw;
-    margin: 0 15vw;
+    margin: 10vw 0 10vw 0;
     color: #064d79;
     text-align: center;
-    margin-bottom: 10vw;
+    align-items: center;
+}
+
+.impact-grid h1{
+    font-size: 4.5vw;
 }
 
 .impact-item{
     display: flex;
-    gap: 2vw;
+    gap: 1vw;
     align-items: center;
-    justify-content: space-between;
     font-weight: bold;
 }
 .impact-item img{
-    width: 15vw;
+    width: 20vw !important;
+    height: auto !important;
+    flex-shrink: 0;
+    color: black;
 }
+
 .items{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5vw;
+    justify-items: center;
+}
+
+.impact-title{
+    width: 70vw;
+    color: black;
+}
+/* Mobile-first: first item on top spanning both columns */
+.impact-item-first{
+    grid-column: span 2;
+    justify-self: center;
+}
+
+.impact-text{
+    width: 22vw;
     display: flex;
     flex-direction: column;
-    gap: 5vw;
+    align-items: center;
+    color: #137ebeff;
+}
+.impact-text h3{
+    font-size: 10vw;
+}
+.impact-text p{
+    font-size: 3vw;
 }
 
 .introduction{
@@ -48,38 +128,167 @@
     text-align: left;
 }
 
+.home-colaborations-text{
+    background-color: #231f20ff;
+    margin-top: -5px;
+    padding: 10vw 10vw;
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    text-align: start;
+}
+
+.home-colaborations h2{
+    font-size: 7vw;
+    font-weight: bold;
+}
+
+.home-colaborations p{
+    font-size: 4.5vw;
+    line-height: 1.5;
+}
+
+.home-button{
+    color: white;
+    text-decoration: none;
+    width: fit-content;
+    font-size: 5vw;
+    font-weight: 800;
+    padding: 2vw 5vw;
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
+.home-button:hover{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.home-button:active{
+    background-color: rgba(255, 255, 255);
+    color: black;
+    border: 2px solid white;
+}
+
 @media(min-width:1024px){
-    .card-banner{
-        margin-top: 2vw;
-        margin-bottom: 2vw;
-        display: flex;
-        gap: 3vw; 
+    .frontpage-home-section{
+        display: grid;
+        margin-top: 0;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: auto auto;
     }
-    .impact-grid{
+    .main-home-frontpage{
+        margin-top:0;
+    }
+    .main-home-frontpage-text{
+        padding: 5vw 7vw;
         gap: 2vw;
-        margin-bottom: 1vw;
+        height: auto;
     }
-    .impact-item{
+    .main-home-frontpage-text p{
+        font-size: 1.5vw;
+    }
+    .frontpage-about h1{
+        font-size: 3vw;
+    }
+    .frontpage-about h3, .frontpage-programs h2{
+        font-size: 1.5vw;
+        font-weight: 500;
+        margin: 0;
+    }
+    .main-home-frontpage-img{
+        width: 100%;
+        height: 100%!important;
+        object-fit: cover;
+        object-position: center;
+    }
+    .frontpage-programs-section{
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: auto auto;
+    }
+    .frontpage-programs-section img{
+        height: 100%!important;
+        object-fit: cover;
+    }
+    .frontpage-programs{
+        order:1!important;
+    }
+    .frontpage-programs h2{
+        font-size: 3.5vw;
+    }
+    .frontpage-programs p{
+        font-size: 2vw;
+    }
+    /* Impacto */
+    .impact-grid{
+        margin: 0;
+        padding: 10vw 10vw;
+        align-items: flex-start;
+    }
+    .impact-title{
+        text-align: start;
+        width: 100%;
+        display: flex;
         flex-direction: column;
-        justify-content: center;
-        width: 10vw;
+        gap: 2vw;
     }
-    .impact-item img{
-        width: 7vw;
+    .impact-title h2{
+        font-size: 3.5vw;
+    }
+    .impact-title p{
+        font-size: 2vw;
+        font-weight: 500;
     }
     .items{
+        width: 100%;
         display: flex;
-        flex-direction: row;
         justify-content: space-between;
     }
-    .introduction{
-        margin: 3vw 5vw;
+    .impact-item{
+        align-items: unset;
     }
-    .introduction h1{
-        font-size: 2.5vw;
-        margin-bottom: 1vw;
+    .impact-item img{
+        width: 10vw !important;
+        height: auto !important;
     }
-    .introduction p{
-        font-size: 1.2vw;
+    .impact-text{
+        width: 12vw;
+    }
+    .impact-text h3{
+        font-size: 5vw;
+    }
+    .impact-text p{
+        font-size: 1.5vw;
+    }
+    /* Home colaborations */
+    .home-colaborations{
+        display: grid;
+        grid-template-columns: 60% 40%;
+        height: 32vw;
+    }
+    .home-colaborations img{
+        object-fit: cover;
+        /* object-position: 0 -1vw; */
+    }
+    .home-colaborations-text{
+        padding: 5vw 5vw;
+        gap: 2vw;
+        text-align: start;
+        align-items: flex-start;
+        margin-right: -0.1vw;
+    }
+    .home-colaborations-text h2{
+        font-size: 3.5vw;
+    }
+    .home-colaborations-text p{
+        font-size: 2vw;
+        line-height: 1.5;
+    }
+    .home-button{
+        font-size: 2vw;
+        padding: 1vw 3vw;
     }
 }
