--- a/app/components/navbar/navbar.css
+++ b/app/components/navbar/navbar.css
@@ -10,17 +10,17 @@
 /* end conditionals */
 
 .navbar{
-    position: fixed;
+    position: static;
     height: 15vw;
     width: 100%;
     background-color: #ffffff;
-    z-index: 100;
     color: #064d79;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-items: end;
     box-shadow: 0 1px 10px black;
+    z-index: 5000;
 }
 
 .navbar button{
@@ -75,7 +75,7 @@
     position: absolute;
     top: 0;
     transition: right .2s ease-in-out;
-    z-index: 1000;
+    z-index: auto;
 }
 
 .menu-background{
@@ -85,6 +85,7 @@
     top: 0;
     background-color: black;
     transition: opacity .3s;
+    z-index: 9998;
 }
 
 .menu{
@@ -95,7 +96,7 @@
     position: fixed;
     top: 0;
     padding:15vw 0vw 0 5vw;
-    z-index: 200;
+    z-index: 10000;
     height: 100%;
     width: 55vw;
     background-color:white;
