--- a/app/home.css
+++ b/app/home.css
@@ -192,6 +192,7 @@
     }
     .frontpage-about h1{
         font-size: 3vw;
+        text-align: center;
     }
     .frontpage-about h3, .frontpage-programs h2{
         font-size: 1.5vw;
