--- a/app/collaborate/collaborate.css
+++ b/app/collaborate/collaborate.css
@@ -7,7 +7,7 @@
     align-items: center;
     gap: 2vw;
     padding: 15vw 10vw;
-    margin-top: 15vw;
+    /* margin-top: 15vw; */
     color: #064e7aff;
 }
 
