--- a/app/components/navbar/navbar.css
+++ b/app/components/navbar/navbar.css
@@ -11,6 +11,7 @@
 
 .navbar{
     position: static;
+    overflow-x: hidden;
     height: 15vw;
     width: 100%;
     background-color: #ffffff;
@@ -58,6 +59,8 @@
 
 .menu-hide{
     right: -100vw;
+    width: 0;
+    height: 0;
 }
 
 .menu-visible{
@@ -74,7 +77,7 @@
     height: 100vh;
     position: absolute;
     top: 0;
-    transition: right .2s ease-in-out;
+    transition: right .2s ease-in-out, visibility 5s ease-in-out;
     z-index: auto;
 }
 
