--- a/app/components/navbar/navbar.css
+++ b/app/components/navbar/navbar.css
@@ -59,8 +59,8 @@
 
 .menu-hide{
     right: -100vw;
-    width: 0;
-    height: 0;
+    width: 0!important;
+    height: 0!important;
 }
 
 .menu-visible{
