--- a/app/christmas/christmas.css
+++ b/app/christmas/christmas.css
@@ -118,6 +118,13 @@
         color: #064d79;
         box-shadow: none;
         border: none;
+        
+        &:disabled {
+            background-color: #ccc;
+            color: #666;
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
     }
 }
 
@@ -170,4 +177,78 @@
 .asterizco{
     font-family: Arial, Helvetica, sans-serif;
     color: red;
+}
+
+.field-error {
+    color: #c00;
+    font-size: 3.5vw;
+    margin-top: 0.5vw;
+    font-weight: 500;
+}
+
+@media (min-width: 1024px){
+    .christmas-decoration{
+        width: 30%;
+    }
+    .campaign-description{
+        font-size: 2vw;
+    }
+    .christmas-form-container{
+        padding: 10vw 5vw;
+        width: 60%;
+        margin-right: 20vw;
+        gap: 0;
+        & h2{
+            font-size: 3vw;
+            margin-right: 0;
+        }
+        & p{
+            font-size: 2vw;
+        }
+        & h3{
+            font-size: 2vw;
+        }
+        & input {
+            font-size: 1vw;
+            padding: 1vw 1vw;
+        }
+        & select {
+            font-size: 1vw;
+            padding: 1vw 1vw;
+        }
+        & button {
+            font-size: 1.5vw;
+            padding: 1vw 2vw;
+        }
+    }
+    .field-error{
+        font-size: 1.2vw;
+        font-family: "Raleway", serif;
+    }
+    .campaign-locations-info{
+        padding: 5vw;
+        & p{
+            font-size: 2vw;
+            width: 50%;
+            line-height: 1.5;
+        }
+    }
+    .campaign-notTo{
+        padding: 5vw;
+        margin-right: 30vw;
+        & h2 {
+            font-size: 3vw;
+            margin-right: 0;
+        }
+        & p{
+            font-size: 2vw;
+        }
+    }
+    .christmas-footer{
+        margin: 0;
+    }
+    .christmas-footer-text h2{
+        font-size: 4vw;
+    }
+    
 }
