terms and conditions added, christmas v1.0.2

--- a/app/christmas/christmas.css
+++ b/app/christmas/christmas.css
@@ -192,6 +192,7 @@
     }
     .campaign-description{
         font-size: 2vw;
+        padding: 1vw;
     }
     .christmas-form-container{
         padding: 10vw 5vw;
