--- a/app/christmas/christmas.css
+++ b/app/christmas/christmas.css
@@ -78,6 +78,7 @@
 .christmas-form-container{
     padding: 15vw 5vw;
     color: #064d79;
+    background-color: white;
 }
 
 .christmas-form-container h2{
@@ -97,6 +98,7 @@
     color: black;
     display: flex;
     flex-direction: column;
+    background-color: white;
     & .terms{
         flex-direction: row;
         gap: 2vw;
@@ -147,6 +149,7 @@
     flex-direction: column;
     padding: 10vw 5vw;
     color: #064d79;
+    background-color: white;
 
      & h2 {
         font-size: 5vw;
